# Cardiomegaly_Classifier

./: .gitignore  CMakeLists.txt  README.md  cardiomegaly_cuda  generate_weights.py  run_generate_weights.sbatch  run_inference.sbatch
data/weights/: cardio_weights_224x224.npy  cardiomegaly_weights_224x224_trained_CROP.npy  static_weights_128x128.npy  static_weights_224x224.npy  static_weights_64x64.npy
notebooks/: Untitled.ipynb  cardiomegaly_classifier.ipynb  extract_images.ipynb  generate_weights.ipynb  generate_weights.py  generate_weights_updated_structure.ipynb
results/: naive.ncu-rep  naive_profile.ncu-rep  reduce_profile.ncu-rep  sequential_metrics.txt  sequential_scores.csv
src/: cardiomegaly_cuda  cardiomegaly_cuda.cu  cardiomegaly_seq  cardiomegaly_sequential  common.hpp  cuda_classifier_ops.cu  cuda_classifier_ops.h  extract_files.py  generate_static_weights.py  log_cuda_14956.err  main_sequential.cpp  prof_vec4_128.sbatch  prof_vec4_128_10k.sbatch  prof_vec4_256.sbatch  prof_vec4_256_10k.sbatch  prof_vec4_512.sbatch  prof_vec4_512_10k.sbatch  profile_naive.sbatch  profile_reduce.sbatch  profile_vec4.sbatch  run_inference.sbatch  slurm_extract.sh  test.py  utils.hpp
